--- a/app/src/main/res/layout/activity_tabuleiro.xml
+++ b/app/src/main/res/layout/activity_tabuleiro.xml
@@ -150,6 +150,33 @@
             android:layout_marginBottom="39dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="51dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="221dp"
+            android:layout_marginTop="15dp"
+            android:text="SCORE: "
+            android:textColor="@color/green"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pause" />
+
+        <TextView
+            android:layout_width="20dp"
+            android:layout_height="15dp"
+            android:text="0"
+            android:textColor="@color/green"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/textView2"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintHorizontal_bias="0.0" />
     </android.support.constraint.ConstraintLayout>
 
 
