--- a/app/src/main/res/layout/activity_tabuleiro.xml
+++ b/app/src/main/res/layout/activity_tabuleiro.xml
@@ -53,7 +53,7 @@
             tools:layout_constraintLeft_creator="1"
             android:layout_marginBottom="44dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/up"
+            app:layout_constraintTop_toTopOf="@+id/upper"
             android:layout_marginLeft="16dp" />
 
         <ImageButton
@@ -71,17 +71,17 @@
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintBottom_creator="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="@+id/up"
+            app:layout_constraintRight_toRightOf="@+id/upper"
             android:layout_marginTop="44dp"
             tools:layout_constraintLeft_creator="1"
             android:layout_marginBottom="37dp"
-            app:layout_constraintLeft_toLeftOf="@+id/up"
+            app:layout_constraintLeft_toLeftOf="@+id/upper"
             app:layout_constraintTop_toTopOf="@+id/right"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageButton
-            android:id="@+id/up"
+            android:id="@+id/upper"
             android:layout_width="66dp"
             android:layout_height="72dp"
             android:layout_alignParentBottom="true"
@@ -157,7 +157,7 @@
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="22dp"
-            android:id="@+id/textView5"
+            android:id="@+id/score"
             tools:layout_constraintRight_creator="1"
             app:layout_constraintRight_toRightOf="@+id/linearLayout"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
@@ -177,7 +177,7 @@
         android:layout_marginRight="29dp"
         android:layout_marginStart="29dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/score"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
